# rusty_api

./: Cargo.toml  SHOW
migrations/2023-11-05-204631_event_tables/: down.sql  up.sql
src/: main.rs  schema.rs  user.rs
