[package]
name = "rusty_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql ="*"
rocket = "0.4.5"
dotenv = "0.15.0"
chrono="0.4.24"
serde = { version = "1.0.0", features = ["derive"] }
diesel = { version = "1.4", features = ["mysql"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"

[dependencies.rocket_contrib]
version = "0.4.11"
features = ["handlebars_templates", "tera_templates"]

